--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title></title>
     <!--<link href="Css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">-->
     <link href="css/component.css" rel="stylesheet" type="text/css">
-    <link href="Css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="Css/master.css" rel="stylesheet" type="text/css">
-    <link href="Css/master.css" rel="stylesheet" type="text/css" data-name="skins" media="screen">
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="css/master.css" rel="stylesheet" type="text/css">
+    <link href="css/master.css" rel="stylesheet" type="text/css" data-name="skins" media="screen">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <link rel="stylesheet" type="text/css" href="css/switcher.css" media="screen" />
@@ -21,7 +21,7 @@
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="css/animate.min.css" type="text/css"> 
 	  <!-- AniCollection.css library -->
-    <link rel="stylesheet" href="http://anijs.github.io/lib/anicollection/anicollection.css">
+    <link rel="stylesheet" href="https://anijs.github.io/lib/anicollection/anicollection.css">
     <script src="js/modernizr.custom.js"></script>
     <script>
         var mdtc = '<div class="web-img"><img src="images/1.jpg"/><br>Link:<a href="">https://www.mdtc.com.ua</a> </div><div class="description"><h3>Short Description</h3><p>MDTC in Under Construction.. This is a Single Page Website and this Website Concept is to provide the highest quality security products at the most competitive pricing in the industry to security equipment companies and national retail outlets. </p> <a type="button" href="">Go to Website</a> </div>';
@@ -856,10 +856,10 @@
     <script type="text/javascript" src="js/styleswitch.js"></script> <!-- Style Colors Switcher -->
 
      <!-- AniJS core library -->
-  <script src="http://anijs.github.io/lib/anijs/anijs-min.js"></script> 
+  <script src="https://anijs.github.io/lib/anijs/anijs-min.js"></script> 
   
   <!-- Include to use $addClass, $toggleClass or $removeClass -->
-  <script src="http://anijs.github.io/lib/anijs/helpers/dom/anijs-helper-dom-min.js"></script>
+  <script src="https://anijs.github.io/lib/anijs/helpers/dom/anijs-helper-dom-min.js"></script>
 
         <script src="js/classie.js"></script>
         <script src="js/wow.min.js"></script>
