--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/switcher.css" media="screen" />
 
-    <link href="Css/customAlert.css" rel="stylesheet" type="text/css">
+    <link href="css/customAlert.css" rel="stylesheet" type="text/css">
 
     
 
