--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
     </style>
 
 
-    <script src="js/prefixfree.min.js"></script>
+    <script src="/js/prefixfree.min.js"></script>
 </head>
 <body id="body">
         <nav id="main-nav" class="navbar navbar-inverse navbar-fixed-top">
