--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/animate.min.css" type="text/css"> 
 	  <!-- AniCollection.css library -->
     <link rel="stylesheet" href="https://anijs.github.io/lib/anicollection/anicollection.css">
-    <script src="js/modernizr.custom.js"></script>
+    <script src="/js/modernizr.custom.js"></script>
     <script>
         var mdtc = '<div class="web-img"><img src="images/1.jpg"/><br>Link:<a href="">https://www.mdtc.com.ua</a> </div><div class="description"><h3>Short Description</h3><p>MDTC in Under Construction.. This is a Single Page Website and this Website Concept is to provide the highest quality security products at the most competitive pricing in the industry to security equipment companies and national retail outlets. </p> <a type="button" href="">Go to Website</a> </div>';
         var golide = '<div class="web-img"><img src="images/2.jpg"/><br>Link:<a href="">golidewatches.netau.net</a> </div><div class="description"><h3>Short Description</h3><p>Golide Watches International (GWT) in Under Construction.. This is MultiPage Website and this Website Concept is to sell online watches of different Watches Brands and make easy to search all watches in one time.. </p> <a type="button" href="">Go to Website</a> </div>';
@@ -638,7 +638,7 @@
       <div class="item-cont">
         <a href="javascript:void(0)">
           <figure>
-          <img src="images/8.jpg" />
+          <img src="images/as.jpg" />
           </figure>
           <div class="item-content">
             <div class="align-content">
