--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                 <div class="intro">
                     <img src="images/bg-triangle.png"><h3>Abdul Moiz</h3>
                     <a href="#">Web Designer & Developer</a>
-                    <p>Hi..! I'm <b>Abdul Moiz</b> and I Leave in Karachi, Pakistan.. I have been a web Designer and developer since last two years. Design or Programming was my original passion.. At this point I’ve worked with HTML, CSS, JavaScript, jQuery, Bootstrap, PHP and Wordpress  </p>
+                    <p>Hi..! I'm <b>Abdul Moiz</b> and I Live in Karachi, Pakistan.. I have been a web Designer and developer since last two years. Design or Programming was my original passion.. At this point I’ve worked with HTML, CSS, JavaScript, jQuery, Bootstrap, PHP and Wordpress  </p>
                     <p>A designer who creates a truly unique identity and applies it practically across a vast digital platform needs creative firepower, seasoned design ability, and eagerness to get their hands dirty in development. I’ve worked relentlessly to become that designer. </p>
                 <button type="button" class="button btn-info btn-block btn-sm wow shake">More Info</button>
                 </div>
