--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Shah Moiz</title>
     <!--<link href="Css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">-->
     <link href="css/component.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
