--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
       <div class="item-cont">
         <a href="javascript:void(0)">
           <figure>
-          <img src="images/wp-sample.jpg" />
+          <img src="images/8.JPG" />
           </figure>
           <div class="item-content">
             <div class="align-content">
