--- a/AbdulMoiz.html
+++ b/AbdulMoiz.html
@@ -19,7 +19,7 @@
 
                 <nav class="col-md-8">
 
-                    <a href="javascript:void(0)">Home</a>
+                    <a href="javascript:void(0)">H</a>
 
                         <span class="header-dropdown">
                             <a href="javascript:void(0)" class="skills">My Skills <span class="header-top-dropdown">***</span></a>
