--- a/AbdulMoiz.html
+++ b/AbdulMoiz.html
@@ -14,12 +14,12 @@
 
             <div class="header-limiter">
                 <div class="logo">
-                    <h1><a href="javascript:void(0)"><img src="Images/abdul.jpg" class="myImage">Abdul<span>Moiz</span></a></h1>
+                    <h1><a href="javascript:void(0)"><img src="Images/abdul.jpg" class="myImage">Abs<span>Moiz</span></a></h1>
                 </div>
 
                 <nav class="col-md-8">
 
-                    <a href="javascript:void(0)">H</a>
+                    <a href="javascript:void(0)">Home</a>
 
                         <span class="header-dropdown">
                             <a href="javascript:void(0)" class="skills">My Skills <span class="header-top-dropdown">***</span></a>
